c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/pointer_conversions/convert_void_ptr_to_int.c
int main(void) {
  void *x = 0;
  return x; // can't implicitly convert void * to integer as if by assignment
}